spacing fixed

--- a/artworks.css
+++ b/artworks.css
@@ -112,7 +112,7 @@
     }
     .box1 {
         grid-area: a;
-        padding-top: 27%;
+        padding-top: 30%;
     
     }
     
